[package]
name = "cargo_fuzz_example-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cargo_fuzz_example = { path = ".." }

[[bin]]
name = "parse_port"
path = "fuzz_targets/parse_port.rs"
test = false
doc = false
bench = false
